<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#B16201"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/shuju"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/steps_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|left"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/steps_label"
            android:textAlignment="center"
            android:textColor="#F7C2B9B9"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/best_goal"
            android:textAlignment="center"
            android:textColor="#F7C2B9B9"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/num"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/steps_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#C7C4C4"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_34"
            android:textAlignment="center"
            android:textColor="#C7C4C4"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        tools:layout_editor_absoluteY="120dp">

        <TextView
            android:id="@+id/_top"
            android:layout_width="320dp"
            android:layout_height="10dp"
            android:layout_marginBottom="8dp"
            android:background="#633701"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/shi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/bing"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="240dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="80dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/bing" />

        <ImageView
            android:id="@+id/zhaoyun"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_marginStart="240dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="160dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/zhaoyun" />

        <ImageView
            android:id="@+id/zu"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/zu" />

        <ImageView
            android:id="@+id/zhangfei"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_marginTop="240dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/zhangfei" />

        <ImageView
            android:id="@+id/shi"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="160dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/shi" />

        <ImageView
            android:id="@+id/yong"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="240dp"
            android:layout_marginLeft="240dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/yong" />

        <ImageView
            android:id="@+id/caocao"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/caocao" />

        <ImageView
            android:id="@+id/huangzhong"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="240dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/huangzhong" />

        <ImageView
            android:id="@+id/guanyu"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="160dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/guanyu" />

        <ImageButton
            android:id="@+id/block1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="240dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="320dp"
            android:background="#B16201"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top" />

        <ImageView
            android:id="@+id/machao"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="240dp"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top"
            app:srcCompat="@drawable/machao" />

        <ImageButton
            android:id="@+id/block2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:background="#B16201"
            android:onClick="changeSteps"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toBottomOf="@+id/_top" />

        <TextView
            android:id="@+id/_left"
            android:layout_width="10dp"
            android:layout_height="430dp"
            android:background="#633701"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/_right"
            android:layout_width="10dp"
            android:layout_height="430dp"
            android:background="#633701"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/_bottom2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/_bottom1"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#633701"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/_bottom2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#633701"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/exit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/exit"
            android:layout_width="160dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#4CAF50"
            android:gravity="center"
            android:text="@string/safe_exit"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/_bottom1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#B48102"
            android:onClick="returnHome"
            android:text="@string/return_label"
            android:textColor="#FAF2F2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/restart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#B48102"
            android:text="@string/restart"
            android:textColor="#FAF2F2"
            android:textSize="20sp"
            android:onClick="reStart"/>

        <Button
            android:id="@+id/introduce_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#B48102"
            android:onClick="showIntroduction"
            android:text="@string/introduction"
            android:textColor="#FAF2F2"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>